--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-﻿
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js">
 	
 
@@ -9,10 +8,15 @@
 
 
 </script>
-
+<!DOCTYPE html>
 <html>
-<title>個人網頁</title>
+
 <style>
+body {
+  background-color: black;
+}
+
+
 .text-25{
 	font-size: 25px;
     color:red;
@@ -33,13 +37,7 @@
 
 </style>
 
-<body background="http://www.nhyz.org/lx/wljs/chap4/bg/7.gif" >
-html{overflow-y:scroll;}
-
-
- 
- 
-<table border="0" bgcolor="white" align="center">
+<body  background="http://www.nhyz.org/lx/wljs/chap4/bg/7.gif" width="731" height="=966">
 <!--「背景特效-櫻花落下」程式碼的開始 --> 
 <SCRIPT Language="JavaScript">
 //Pre-load your image below! 
@@ -128,157 +126,8 @@ setTimeout('fall()',15);
 window.onload=fall
 </SCRIPT>
 <!-- 這是「背景特效-櫻花落下」程式碼的結束-->
-　<tr>
-　<td>
-<center><img  class="smaller-image thick-green-border" 
-      src="http://www.planetsdaily.com/uploadfile/2015/0811/20150811110005347.png"></center>
-<font style="background-color:yellow">
-<p>
-<b><h1 class="color : text-25" align="center" valign="center">個人資料</h1></b>
-<b><p class="color : text-25" align="center" valign="center">學校學系</p></b>
-<p class="color : text" align="center" valign="center">輔仁大學資訊工程學系</p>
-<b><p class="color : text-25" align="center" valign="center">姓名/學號</p></b>
-<p class="color : text" align="center" valign="center">蔡鎮安/403261041</p>
-<h1 class="color : text-25" align="center" valign="center">相關連結</h1>
-<p class="color : text" align="center" valign="center"> <a href="https://tw.linkedin.com/in/tsaichenan">LinkedIn</a></p>
-<p class="color : text" align="center" valign="center"> <a href="https://github.com/lsionlan">GitHub</a></p>
-</p>
-</font>
-</td>
-　</tr>
-</table>
-</body>
-
-=======
-﻿
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js">
-	
-
-
-
-
-
-
-</script>
-
-<html>
-<title>個人網頁</title>
-<style>
-.text-25{
-	font-size: 25px;
-    color:red;
-  }
-.text{
-	font-size: 16px;
-    color:black;
-  }
- .thick-green-border {
-    border-color: green;
-    border-width: 10px;
-    border-style: solid;
-    border-radius: 50%;
-  }
-.smaller-image {
-    width: 150px;
-  }
-
-</style>
-
-<body background="http://www.nhyz.org/lx/wljs/chap4/bg/7.gif" >
-html{overflow-y:scroll;}
-
-
- 
- 
 <table border="0" bgcolor="white" align="center">
-<!--「背景特效-櫻花落下」程式碼的開始 --> 
-<SCRIPT Language="JavaScript">
-//Pre-load your image below! 
-grphcs=new Array(6) 
-Image0=new Image(); 
-Image0.src=grphcs[0]="images/js2-4.gif";  //指定這個特效所用的圖片 
-Image1=new Image(); 
-Image1.src=grphcs[1]="images/js2-5.gif"  //指定這個特效所用的圖片 
-Image2=new Image(); 
-Image2.src=grphcs[2]="images/js2-6.gif"  //指定這個特效所用的圖片 
-Image3=new Image(); 
-Image3.src=grphcs[3]="images/js2-7.gif"  //指定這個特效所用的圖片 
-Image4=new Image(); 
-Image4.src=grphcs[4]="images/js2-5.gif"  //指定這個特效所用的圖片 
-Image5=new Image(); 
-Image5.src=grphcs[5]="images/js2-6.gif"  //指定這個特效所用的圖片 
 
-<!--以上設定花朵的圖檔名稱-->
-
-Amount=4; //Smoothness depends on image file size, the smaller the size the more you can use! 
-Ypos=new Array(); 
-Xpos=new Array(); 
-Speed=new Array(); 
-Step=new Array(); 
-Cstep=new Array(); 
-ns=(document.layers)?1:0;
-ns6=(document.getElementById&&!document.all)?1:0;
-
-if (ns){ 
-for (i = 0; i < Amount; i++){ 
-var P=Math.floor(Math.random()*grphcs.length); 
-rndPic=grphcs[P];
-document.write("<LAYER NAME='sn"+i+"' LEFT=0 TOP=0><img src="+rndPic+"></LAYER>"); 
-}
-}
-else{
-document.write('<div style="position:absolute;top:0px;left:0px"><div style="position:relative">'); 
-for (i = 0; i < Amount; i++){ 
-var P=Math.floor(Math.random()*grphcs.length); 
-rndPic=grphcs[P];
-document.write('<img id="si'+i+'" src="'+rndPic+'" style="position:absolute;top:0px;left:0px">'); 
-}
-document.write('</div></div>');
-}
-WinHeight=(ns||ns6)?window.innerHeight:window.document.body.clientHeight;
-WinWidth=(ns||ns6)?window.innerWidth-70:window.document.body.clientWidth;
-for (i=0; i < Amount; i++){ 
- Ypos[i] = Math.round(Math.random()*WinHeight); 
- Xpos[i] = Math.round(Math.random()*WinWidth); 
- Speed[i]= Math.random()*5+3; 
- Cstep[i]=0;
- Step[i]=Math.random()*0.1+0.05;
-}
-function fall(){ 
-var WinHeight=(ns||ns6)?window.innerHeight:window.document.body.clientHeight; 
-var WinWidth=(ns||ns6)?window.innerWidth-70:window.document.body.clientWidth; 
-var hscrll=(ns||ns6)?window.pageYOffset:document.body.scrollTop; 
-var wscrll=(ns||ns6)?window.pageXOffset:document.body.scrollLeft; 
-for (i=0; i < Amount; i++){ 
-sy = Speed[i]*Math.sin(90*Math.PI/180); 
-sx = Speed[i]*Math.cos(Cstep[i]); 
-Ypos[i]+=sy;
-Xpos[i]+=sx; 
-if (Ypos[i] > WinHeight){ 
-Ypos[i]=-60;
-Xpos[i]=Math.round(Math.random()*WinWidth);
-Speed[i]=Math.random()*5+3;
-}
-if (ns){ 
-document.layers['sn'+i].left=Xpos[i];
-document.layers['sn'+i].top=Ypos[i]+hscrll;
-}
-else if (ns6){ 
-document.getElementById("si"+i).style.left=Math.min(WinWidth,Xpos[i]);
-document.getElementById("si"+i).style.top=Ypos[i]+hscrll;
-}
-else{
-eval("document.all.si"+i).style.left=Xpos[i];
-eval("document.all.si"+i).style.top=Ypos[i]+hscrll;
-} 
-Cstep[i]+=Step[i];
-}
-setTimeout('fall()',15);
-}
-
-window.onload=fall
-</SCRIPT>
-<!-- 這是「背景特效-櫻花落下」程式碼的結束-->
 　<tr>
 　<td>
 <center><img  class="smaller-image thick-green-border" 
@@ -300,5 +149,4 @@ window.onload=fall
 </table>
 </body>
 
->>>>>>> origin/master
 </html>
