--- a/index.html.html
+++ b/index.html.html
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
 ﻿
-=======
-
->>>>>>> origin/master
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js">
 	
 
@@ -42,6 +38,8 @@ body {
 </style>
 
 <body  background="http://www.nhyz.org/lx/wljs/chap4/bg/7.gif" width="731" height="=966">
+html{overflow-y:scroll;}
+<table border="0" bgcolor="white" align="center">
 <!--「背景特效-櫻花落下」程式碼的開始 --> 
 <SCRIPT Language="JavaScript">
 //Pre-load your image below! 
@@ -130,8 +128,6 @@ setTimeout('fall()',15);
 window.onload=fall
 </SCRIPT>
 <!-- 這是「背景特效-櫻花落下」程式碼的結束-->
-<table border="0" bgcolor="white" align="center">
-
 　<tr>
 　<td>
 <center><img  class="smaller-image thick-green-border" 
@@ -153,8 +149,4 @@ window.onload=fall
 </table>
 </body>
 
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> origin/master
