--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-﻿
-=======
+<HEAD>
 
->>>>>>> origin/master
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js">
 	
 
@@ -153,8 +150,7 @@ window.onload=fall
 </table>
 </body>
 
-<<<<<<< HEAD
+< HEAD>
 </html>
-=======
-</html>
->>>>>>> origin/master
+
+
